# dapr-wasm

docs/: page.js
functions/classify/: Cargo.toml  build.sh
functions/classify/src/: lib.rs  main.rs
functions/grayscale/: build.sh
image-api-go/: ff.sqlite  image_api.go  run_mem.sh
image-api-wasi-socket-rs/: Cargo.toml  run_api_wasi_socket_rs.sh
image-api-wasi-socket-rs/src/: lib.rs  main.rs
web-port/: web_port.go
